Clear page footer fix
* Add clear: both to <footer> so previously floated elements, such as
  images, appear above the footer.

* Add .page-footer class to footer avoid polluting the styles of other
  footer elements.

--- a/asset/sass/_desktop.scss
+++ b/asset/sass/_desktop.scss
@@ -39,6 +39,10 @@ footer {
     padding: 0 (2 * gutter()) $spacing-l;
 }
 
+.page-footer {
+    clear: both;
+}
+
 /* @end */
 
 /* @group ----- Navigation ----- */
